// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropAnchors snapshots should render DropAnchors 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for bottom 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--bottom Prompts--bottom--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for left 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--left Prompts--left--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for right 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--right Prompts--right--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for top 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--top Prompts--top--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for bottom 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--bottom Prompts--bottom--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for right 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--right Prompts--right--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for left 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--left Prompts--left--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--left Anchors--left--light"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--right Anchors--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for top 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--light Prompts--top Prompts--top--light"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--bottom Anchors--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--light Anchors--top Anchors--top--light"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;
